--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@ body {
   background: linear-gradient(white, #3d3f42);
 }
 
-.header {
+/* HEADER STYLES START */
+header {
   width: 100%;
   min-width: 980px;
   background-color: rgba(221, 152, 24, 0.842);
@@ -68,4 +69,128 @@ body {
   background-color: #084b8a;
   color: white;
   border: 1px solid #08298a;
+}
+/* HEADER STYLES END */
+
+.create {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    margin: 0 auto;
+    padding: 0px;
+    text-align: center;
+    width: 980px;
+  }
+.create div {
+  font-family: helvetica, arial, sans-serif;
+}
+.create_img {
+  margin-top: 30px;
+  width: 590px;
+  text-align: left;
+}
+.create_img p {
+  font-size: 20px;
+  font-family: arial;
+  font-weight: bold;
+  margin: 0px;
+  color: #0e385f;
+}
+.create_img img {
+  width: auto;
+  height: 590px;
+  margin: 3.5%;
+}
+.create_account {
+  margin: 3%;
+  width: 390px;
+  text-align: left;
+}
+.create_account h1 {
+  margin: 0px;
+  font-size: 37px;
+  color: #2e2e2e;
+}
+.create_account p {
+  font-size: 18px;
+  color: #2e2e2e;
+}
+.create_account li {
+  list-style-type: none;
+  margin-top: 10px;
+}
+.create_account li #firstname {
+  width: 49%;
+}
+.create_account li #lastname {
+  width: 49%;
+}
+.create_account li input[type="text"] {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  padding-left: 10px;
+  font-size: 18px;
+  border: 1px solid #bdbdbd;
+}
+.create_account li input[type="password"] {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  padding-left: 10px;
+  font-size: 18px;
+  border: 1px solid #bdbdbd;
+}
+.create_account li select {
+  padding: 4px;
+  float: left;
+}
+.create_account li a {
+  margin-left: 10px;
+  width: 150px;
+  color: #045fb4;
+  text-decoration: none;
+  font-size: 11px;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 15px;
+}
+.create_account li a:hover {
+  text-decoration: underline;
+}
+.create_account li {
+  color: #2e2e2e;
+  font-size: 18px;
+}
+.create_account li input[type="submit"] {
+  width: 205px;
+  height: 45px;
+  text-align: center;
+  font-size: 19px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "Freight Sans Bold", helvetica, arial, sans-serif !important;
+  font-weight: bold !important;
+  background: linear-gradient(#67ae55, #578843);
+  background-color: #69a74e;
+  box-shadow: inset 0 1px 1px #a4e388;
+  border-color: #3b6e22 #3b6e22 #2c5115;
+  border: 1px solid;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+.create_page {
+  color: #424242;
+  font-size: 13px;
+  font-weight: bold;
+}
+.create_page a {
+  display: inline;
+  margin: 0px;
+  font-size: 13px;
 }
